--- a/static/css/style.css
+++ b/static/css/style.css
@@ -352,25 +352,46 @@ form.d-flex input[type="text"] {
     bottom: 0;
     width: 100%;
     height: 60px;
-}
-.footer-p {
-    font-size: 1.2rem;
-}
-.contact {
-    color: #F5F5F5;
-    text-decoration: none;
-    font-size: 1.5rem;
-}
-.contact:hover {
-    color: #F50000;
+    font-size: 1rem;
 }
 
-/* Small screens: Stack search items vertically */
+/*Media Queries*/
+/*1 Extra small mobile devices (phones, 320px and above)*/
+@media screen and (min-width: 320px) {
+    .hero-image img {
+        height: 30vh;
+    }
+}
+
+/*2 Small screens: Stack search items vertically */
 @media (max-width: 425px) {
     .nav-search {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    }
+}
+
+/*3 Small mobile devices (phones, 420px and above)*/
+@media screen and (min-width: 425px) {
+    .hero-image img {
+        height: 35vh;
+    }
+    .result-card img {
+        width: 300px;
+        height: 300px;
+        object-fit: contain;
+    }
+}
+/*4 Medium mobile devices (phones, 576px and above)*/
+@media screen and (min-width: 576px) {
+    .hero-image img {
+        height: 40vh;
+    }
+    .result-card img {
+        width: 400px;
+        height: 400px;
+        object-fit: contain;
     }
 }
 
