--- a/gig_reviews/templates/gig_reviews/gallery.html
+++ b/gig_reviews/templates/gig_reviews/gallery.html
@@ -16,22 +16,22 @@
                     {% else %}
                     <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
                     {% endif %}
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <h5 class="card-title">{{ review.title }}</h5>
                         <p class="card-text">
                             {% if review.artist %}
-                                <strong>Artist:</strong>
+                            <strong>Artist:</strong>
                                 <a href="{% url 'artist' review.artist.pk %}" style="color:#F50000">{{ review.artist.name }}</a><br>
-                            {% else %}
-                                <strong>Venue:</strong>
+                            {% endif %}
+                            <strong>Fan:</strong>
+                                <a href="{% url 'author_profile' review.author.pk %}" style="color:#F50000">{{ review.author.username }}</a><br>
+                            {% if review.venue %}
+                            <strong>Venue:</strong>
                                 <a href="{% url 'venue' review.venue.pk %}" style="color:#F50000">{{ review.venue.name }}</a><br>
                             {% endif %}
-                                <strong>Fan:</strong>
-                                <a href="{% url 'author_profile' review.author.pk %}" style="color:#F50000">{{ review.author.username }}</a><br>
                         </p>
                         <p class="card-text">{{ review.review|truncatewords:30 }}</p>
-                    </div>
-                    <div class="card-footer">Gig Date: {{ review.gig_date|date:"d/m/Y" }}
+                        <p class="card-footer">Gig Date: {{ review.gig_date|date:"d/m/Y" }}</p>
                     </div>
                 </div>
             </div>
@@ -39,4 +39,3 @@
     </div>
 </div>
 {% endblock %}
-
