--- a/gig_reviews/templates/partials/reviews_section.html
+++ b/gig_reviews/templates/partials/reviews_section.html
@@ -6,7 +6,7 @@
       <div class="row g-4 justify-content-center mt-3">
         {% for review in reviews %}
           <div class="col-12 col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="card h-100 chaos-card tilt">
+            <div class="card h-100 w-100 chaos-card tilt">
               {% if review.image and review.image.url and "placeholder" not in review.image.url %}
                 <img src="{{ review.image.url }}" class="card-img-top" alt="Review image">
               {% else %}
@@ -15,36 +15,29 @@
 
               <div class="card-body">
                 <h5 class="card-title">{{ review.title }}</h5>
-
-                {% if review.artist %}
-                  <p class="card-text"><strong>{{ review.artist.name }}</strong></p>
-                {% elif review.venue %}
-                  <p class="card-text"><strong>{{ review.venue.name }}</strong></p>
-                {% endif %}
-
                 <p class="card-text">
-                Fan:
-                  <a href="{% url 'author_profile' review.author.pk %}" style="color:#F50000">
-                    {{ review.author.username }}
-                  </a><br>
                 Artist:
                   <a href="{% url 'artist' review.artist.pk %}" style="color:#F50000">
                     {{ review.artist.name }}
+                  </a><br>
+                Fan:
+                  <a href="{% url 'author_profile' review.author.pk %}" style="color:#F50000">
+                    {{ review.author.username }}
                   </a><br>
                 Venue:
                   <a href="{% url 'venue' review.venue.pk %}" style="color:#F50000">
                     {{ review.venue.name }}
                   </a>
                 </p>
-                <p class="card-text">Date: {{ review.gig_date|date:"d-m-Y" }}</p>
                 <p class="card-text">{{ review.review }}</p>
+                <p class="card-footer">Gig Date: {{ review.gig_date|date:"d/m/Y" }}</p>
               </div>
             </div>
           </div>
         {% endfor %}
       </div>
     {% else %}
-      <p><em>No reviews yet.</em></p>
+      <p><em>No reviews yet</em></p>
     {% endif %}
   </div>
 </div>
