--- a/gig_reviews/templates/gig_reviews/artist.html
+++ b/gig_reviews/templates/gig_reviews/artist.html
@@ -8,7 +8,7 @@
 <div class="container search-item py-4">
   <div class="row mx-auto justify-content-center">
     <div class="col-12 text-center">
-      <h1>{{ artist.name }}'s Public Profile</h1>
+      <h1>{{ artist.name }}'s Profile</h1>
       {% if artist.logo %}
         <img src="{{ artist.logo.url }}" alt="{{ artist.name }}'s logo" class="img-fluid mb-3">
       {% else %}
